# wunderk

./: .env  .gitignore  Dockerfile  LICENSE  Makefile  README.md  bootup.sh  docker-compose.yml  main.sh  wk.sh
dotstreamlit/: config.toml  secrets.toml
wui/: Makefile  ollama_test.py  pyproject.toml  requirements.txt  setup.sh  wui.json  wui.py
wui/common/: config.py  embed.py  files.py  llminfo.py  mcp.py  vectordb.py
wui/pages/: 01_Files.py  02_Search.py  03_MCP.py  04_Settings.py
xdnext/: Makefile  README.md  go.sum  main.go  xdnext.json
xdnext/cloud/: aws.go  az.go
xdnext/cmd/: aws.go  az.go  go.sum  init.go  root.go  server.go  test.go  utils.go
xdnext/core/: config.go  dbutils.go  models.go
xdnext/router/: cnode.go  handlers.go  ttasks.go  tusers.go
