[project]
name = "wui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=0.3.14",
    "langchain-core>=0.3.59",
    "langchain-google-genai>=2.1.5",
    "langchain-mcp-adapters>=0.1.4",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.16",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.4.7",
    "loguru>=0.7.3",
    "markitdown[all]>=0.1.1",
    "mcp-server-time>=0.6.2",
    "mcp[cli]>=1.8.1",
    "nest-asyncio>=1.6.0",
    "ollama>=0.4.8",
    "openai>=1.77.0",
    "qdrant-client>=1.14.2",
    "ruff>=0.11.8",
    "streamlit>=1.45.0",
    "streamlit-js-eval>=0.1.7",
]
